💄 Add constants: colors

--- a/src/global-styles/main.scss
+++ b/src/global-styles/main.scss
@@ -1,3 +1,6 @@
 // base
 @import "./base/_normalize.scss";
 @import "./base/reset.scss";
+
+// constants
+@import "./constants/_colors.styles.scss";
