💄 Add style utility scripts

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 // base
 @import "./base/_normalize.scss";
 @import "./base/reset.scss";
+@import "./base/_globals.scss";
 
 // constants
 @import "./constants/_colors.scss";
